--- a/src/Resources/templates/offcanvas/offcanvas.v1.html.twig
+++ b/src/Resources/templates/offcanvas/offcanvas.v1.html.twig
@@ -47,9 +47,9 @@
 
     {% component 'button' with {
         label       : "&times;",
-        eventHandler: "hide-offcanvas",
         role        : 'close',
         dataset     : {
+            action: 'hide',
             target: _id,
         }
     } %}
