--- a/src/Resources/templates/searchbar/searchbar.v1.html.twig
+++ b/src/Resources/templates/searchbar/searchbar.v1.html.twig
@@ -19,6 +19,11 @@
 {% if _attr.class is not defined %}
 {% set _attr = _attr|merge({class: ''}) %}{% endif %}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' searchbar') %}
+
+{# Add custom class #}
+{% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
 {% set _attr = _add_attribute(_attr, 'role', 'search') %}
 
 
