--- a/src/Resources/templates/thumbnail/thumbnail.v1.html.twig
+++ b/src/Resources/templates/thumbnail/thumbnail.v1.html.twig
@@ -13,6 +13,8 @@
 {# Class Attribute #}
 {% set _attr = _attr|merge({class: ''}) %}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' thumbnail') %}
+
+{# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
