--- a/src/Resources/templates/alert/alert.v1.html.twig
+++ b/src/Resources/templates/alert/alert.v1.html.twig
@@ -1,18 +1,20 @@
 {# ------------------ DevBrain Component : Alert - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
-{% set _class = class|default('') %}
+{# Private properties #}
+{% set _attr    = attr|default({}) %}
+{% set _attr    = _attr|merge({class: ''}) %}
+{% set _attr    = _add_attribute(_attr, 'class', _attr.class ~' alert') %}
+
+{# Public properties #}
+{% set _class   = class|default('') %}
 
 
 
 {# ------------------- DevBrain Component : Alert - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
 
-{% set _attr = attr|default({}) %}
-
-{# Class Attribute #}
-{% set _attr = _attr|merge({class: ''}) %}
-{% set _attr = _add_attribute(_attr, 'class', _attr.class ~' alert') %}
+{# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
