--- a/src/Resources/templates/announcement/announcement.v1.html.twig
+++ b/src/Resources/templates/announcement/announcement.v1.html.twig
@@ -16,6 +16,8 @@
 {# Class Attribute #}
 {% set _attr = _attr|merge({class: ''}) %}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' announcement') %}
+
+{# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
