--- a/src/Resources/templates/card/card.v1.html.twig
+++ b/src/Resources/templates/card/card.v1.html.twig
@@ -18,6 +18,8 @@
 {# Class Attribute #}
 {% set _attr = _attr|merge({class: ''}) %}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' card') %}
+
+{# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
