--- a/src/Resources/templates/menu/menu.v1.html.twig
+++ b/src/Resources/templates/menu/menu.v1.html.twig
@@ -1,24 +1,43 @@
 {# ------------------ DevBrain Component : Menu - Settings ------------------ #}
 {# -------------------------------------------------------------------------- #}
 
-{% set _class = class|default('') %}
+{# Private properties #}
+{% set _attr        = attr|default({}) %}
+{% set _attr        = _attr|merge({class: ''}) %}
+{% set _attr        = _add_attribute(_attr, 'class', _attr.class ~' menu') %}
+
+{# Public properties #}
+{% set _class       = class|default('') %}
+{% set _label       = label|default('') %}
+{% set _orientation = orientation|default('horizontal') %}
+{% set _items       = items|default([]) %}
 
 
 
 {# -------------------- DevBrain Component : Menu - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
 
-{% set _attr = attr|default({}) %}
+{# Menu Orientation #}
+{% if _orientation == 'vertical' %}
+{% set _attr = _add_attribute(_attr, 'class', _attr.class ~' menu-vertical') %}
+{% endif %}
 
-{# Class Attribute #}
-{% set _attr = _attr|merge({class: ''}) %}
-{% set _attr = _add_attribute(_attr, 'class', _attr.class ~' menu') %}
+{# Aria label #}
+{% if _label is not empty %}
+{% set _attr = _add_attribute(_attr, 'aria-label', _label) %}
+{% endif %}
+
+{# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ------------------- DevBrain Component : Menu - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div {{ _get_attributes(_attr) }}>
-    Menu
-</div>
+<nav {{ _get_attributes(_attr) }}>
+    <ul class="menu-items">
+    {% for item in _items %}
+    {% component 'menu' part 'item' with item %}
+    {% endfor %}
+    </ul>
+</nav>
