--- a/sass/abstracts/mixins/_sizes.scss
+++ b/sass/abstracts/mixins/_sizes.scss
@@ -17,6 +17,14 @@
 /// 
 @mixin set($width: null, $height: null) 
 {
+  @include width($width);
+  @include height($height);
+}
+@mixin width($width: null) 
+{
   @if ($width not null) {width : $width;}
+}
+@mixin height($height: null) 
+{
   @if ($height not null) {height : $height;}
 }
