--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -5,7 +5,9 @@
 // ************************************************************************** //
 
 @use './../abstracts/mixins/flex';
+@use './../abstracts/mixins/sizes';
 @use './../abstracts/mixins/spaces';
+@use './../abstracts/mixins/position';
 @use './../abstracts/mixins/transition';
 
 
@@ -17,14 +19,18 @@
 // Default Theme
 // --------------------------
 
+
+$default--menu--background-color              : $white;
+$default--submenu--background-color           : $white;
+
 $default--menu-link--text-color               : $black;
 $default--menu-link--background-color         : transparent;
 
-$default--menu-link--hover-text-color         : $white;
-$default--menu-link--hover-background-color   : $gray-500;
+$default--menu-link--hover-text-color         : $black;
+$default--menu-link--hover-background-color   : $gray-200;
 
 $default--menu-link--active-text-color        : $black;
-$default--menu-link--active-background-color  : $gray-500;
+$default--menu-link--active-background-color  : $gray-300;
 
 $default--menu-link--disabled-text-color      : $gray-500;
 $default--menu-link--disabled-background-color: transparent;
@@ -35,22 +41,31 @@ $default--menu-link--disabled-background-color: transparent;
 ///
 
 .menu {
-
-    border:3px solid red;
+    background-color: var(--menu--background-color, $default--menu--background-color);
 
 
     // Items
     // --
 
     &-items {
-        border:3px solid green;
         @include flex.row;
         @include spaces.margin(0,0,0,0);
         flex-wrap: wrap;
+
     }
 
     &-vertical &-items {
         @include flex.column;
+    }
+
+    @each $pos in (center, start, end)
+    {
+        &-#{$pos} &-items {
+            justify-content: #{$pos} !important;
+        }
+    }
+    &-fill &-items {
+        justify-content: space-around !important;
     }
 
     
@@ -59,6 +74,7 @@ $default--menu-link--disabled-background-color: transparent;
 
     &-item {
         // border: 10px solid pink;
+        @include position.relative;
     }
 
     
@@ -95,6 +111,26 @@ $default--menu-link--disabled-background-color: transparent;
 
 
 // Sub Menu
-.with-submenu > .menu {
-    display: none;
+.with-submenu {
+
+    // & > ul {
+    & > .menu-items {
+        @include position.absolute(100%, 0, 0, 0);
+        display: none;
+        height: fit-content;
+
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        background-color: var(--submenu--background-color, $default--submenu--background-color);
+        z-index: 1000;
+    }
+    // & > ul & > ul {
+    & > .menu-items & > .menu-items {
+        @include position.left(100%);
+        @include position.top(0);
+        @include sizes.width(100%);
+    }
+
+    &:hover > ul {
+        display: inline;
+    }
 }
