--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -113,6 +113,24 @@ $default--menu-link--disabled-background-color: transparent;
 // Sub Menu
 .with-submenu {
 
+    & > .menu-link {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        &::after {
+            content: "";
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-top: 5px solid #2f2f2f;
+            font-size: 0;
+            line-height: 0;
+            margin-left: map-get($spacers, 2);
+        }
+    }
+
     // & > ul {
     & > .menu-items {
         @include position.absolute(100%, 0, 0, 0);
