--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -5,91 +5,158 @@
 // ************************************************************************** //
 
 @use './../abstracts/mixins/flex';
+@use './../abstracts/mixins/position';
+@use './../abstracts/mixins/transition';
+
+
+
+$_arr_containers : (container, container-fluid);
+@each $size, $breakpoint in $breakpoints {
+    @if $breakpoint > 0 {
+        $_arr_containers: append($_arr_containers, container-#{$size});
+    }
+}
+
+$_str_container: '';
+@each $container in $_arr_containers {
+  $_str_container: $_str_container + '.#{$container}, ';
+}
+$_containers: unquote(str-slice($_str_container, 1, -3));
+
 
 
 /// Navigation variables
 /// =============================================
 ///
 
-$height: 80px;
+$height: 200px;
+
+
+
+// Default Theme
+// --------------------------
+
+$default--navigation--background-color   : $white;
+
 
 /// Navigation component
 /// =============================================
 ///
-
+/// 
 
 .navigation {
-    @include flex.row;
-
-    position: relative;
-    flex-wrap: nowrap;
-    height: $height;
-
-    // & .container,
-    // & .container-fluid
-    // {
-    //     @include flex.row;
-    //     flex-wrap: inherit;
-    //     align-items: center;
-    //     justify-content: space-between;
-    // }
-
-    & [class^=container] {
-        border: 3px solid red;
+    // border: 10px solid red;
+    
+    #{$_str_container} {
+        // border: 10px solid cyan;
         @include flex.row;
-        flex-wrap: inherit;
         align-items: center;
         justify-content: space-between;
-
-        // flex-direction: row-reverse;
     }
 
     & .brand {
-        margin-right: map-get($spacers, 3);
+        // border: 10px solid purple;
     }
 
+    &-content {
+        @include flex.column;
+        @include transition.set((left, right, box-shadow), map-get($delays, normal));
+
+        width: $offcanvas--width;
+
+        background-color: var(--navigation--background-color, $default--navigation--background-color);
+      
+        // border: 10px solid yellow;
+
+        z-index: 1000;
+
+        & .menu {
+            width: 100%;
+        }
+        & .menu > .menu-items {
+            @include flex.column;
+        }
+    }
+
+    // Collapse
     &-collapse {
-        flex-basis: 100%;
-        flex-grow: 1;
-        align-items: center;
+        & #{$_str_container} {
+            @include flex.row;
+            flex-wrap: wrap;
+            & .navigation-content {
+                flex-basis: 100%;
+                max-height: 0;
+                overflow: hidden;
+                @include transition.set((max-height), map-get($delays, normal));
+            }
+        }
+    }
+    &-collapse.show {
+        & #{$_str_container} {
+            & .navigation-content {
+                // height: auto;
+                // height: 200px;
+                max-height: 100vh;
+                overflow:auto;
+            }
+        }
     }
 
-
-    // &-toggler {
-    //     display: block;
-    // }
-    & .menu 
-    {
-        margin: 0;
-        flex-direction: column;
+    // Left
+    &-left &-content {
+        @include position.fixed(0, null, 0, null);
+        @include position.right(auto);
+        @include position.left(-$offcanvas--width);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+    &-left.show &-content {
+        @include position.left(0);
     }
 
+    // Right
+    &-right &-content {
+        @include position.fixed(0, null, 0, null);
+        @include position.left(auto);
+        @include position.right(-$offcanvas--width);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+    &-right.show &-content {
+        @include position.right(0);
+    }
 
-    @each $breakpoint in map-keys($breakpoints)
-    {
-        @media (min-width: map-get($breakpoints,  $breakpoint)) {
-            // Navbar toggler
-            &-toggler {
-                @if ($breakpoint == 'sm' or $breakpoint == 'md') {
-                    display: block;
-                } @else {
-                    display: none;
+    @each $size, $breakpoint in $breakpoints {
+        @if $breakpoint > 0 {
+            @media (min-width: $breakpoint) {
+
+                &.expand-at-#{$size} {
+    
+                    & #{$_str_container} {
+                        @include flex.row;
+                    }
+    
+                    & .navigation-toggler,
+                    & .navigation-close {
+                        display: none;
+                    }
                 }
-            }
+    
+                &.expand-at-#{$size} &-content {
+                    @include position.relative(auto,auto,auto,auto);
+                    @include flex.row;
+                    // width: auto;
+                    flex-grow: 1;
+                    background-color: transparent;
+                    box-shadow: none;
 
-            // Navbar collapse
-            &-collapse {
-                display: flex !important;
-                flex-basis: auto;
-            }
+                    justify-content: space-between;
 
-            // Menu
-            & .menu {
-                @if ($breakpoint == 'sm' or $breakpoint == 'md') {
-                    flex-direction: column;
-                } @else {
-                    flex-direction: row;
-                    column-gap: 3rem;
+
+                    & .menu {
+                        width: auto;
+                    }
+                    & .menu > .menu-items {
+                        @include flex.row;
+                    }
                 }
             }
         }
