--- a/src/Resources/templates/navigation/navigation.default.html.twig
+++ b/src/Resources/templates/navigation/navigation.default.html.twig
@@ -45,7 +45,7 @@
 {# Add custom class #}
 {% set _attr = _add_attribute(_attr, 'class', _attr.class ~ ' '~ _class) %}
 
-
+{# <img src=""/> #}
 
 {# ---------------- DevBrain Component : Navigation - Content --------------- #}
 {# -------------------------------------------------------------------------- #}
